# local-document-agent_Gpt_5.5

./: .gitignore  README.md  local-document-agent-plan.md
local-doc-agent/: .env.example  CONNECTOR_CHECKLIST.md  MVP_STATUS.md  README.md  pyproject.toml
local-doc-agent/scripts/: smoke_mcp.py  start_server.ps1
local-doc-agent/server/: __init__.py  config.py  docx_style.py  logging_utils.py  main.py  pptx_style.py  text_guard.py  tools_assets.py  tools_files.py  tools_templates.py
local-doc-agent/tests/: test_files.py  test_paths.py
