[project]
name = "local-doc-agent"
version = "0.1.0"
description = "Personal local document MCP server for ChatGPT developer mode."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.13.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
